--- a/PuppyApp/packages.config
+++ b/PuppyApp/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
+  <package id="Moment.js" version="2.13.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="twitter-bootstrap-wizard" version="1.2.2" targetFramework="net46" />
