replacing cdn source code paths to protocol less, center dashboard map, add search box to all maps, activity map is now centered on user location, adding diagram

--- a/PuppyApp/PuppyApp.csproj
+++ b/PuppyApp/PuppyApp.csproj
@@ -279,6 +279,7 @@
     <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\moment.min.js" />
     <Content Include="wipe system data.sql" />
+    <Content Include="Models\ModelDiagram.cd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\dashboard.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
