--- a/PuppyApp/PuppyApp.csproj
+++ b/PuppyApp/PuppyApp.csproj
@@ -278,6 +278,7 @@
     <Content Include="Scripts\moment-with-locales.min.js" />
     <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\moment.min.js" />
+    <Content Include="Scripts\ownerViewModel.js" />
     <Content Include="wipe system data.sql" />
     <Content Include="Models\ModelDiagram.cd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
